# nextcloud-agent

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  a2a.json  compose.yml  connector_manifest.yml  debug.Dockerfile  index.html  mcp.compose.yml  mcp_config.json  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml
.specify/reports/: summary.json
.specify/reports/nextcloud-agent/: results.json
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260522/: spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
concepts/: index.html
configuration/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  configuration.md  deployment.md  index.md  installation.md  legacy_readme.md  overview.md  platform.md  usage.md
installation/: index.html
legacy_readme/: index.html
nextcloud_agent/: __main__.py  agent.py  agent_server.py  api_client.py  auth.py  graph_config.py  kg_ingest.py  kg_media.py  mcp.py  mcp_config.json  mcp_server.py  mcp_server.py.debug  middlewares.py  nextcloud_agent.py  nextcloud_api.py  nextcloud_mcp.py  tools.py  utils.py
nextcloud_agent/agent/: HEARTBEAT.md  IDENTITY.md  templates.py
nextcloud_agent/agent_data/: IDENTITY.md  MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  mcp_config.json  templates.py
nextcloud_agent/api/: __init__.py  api_client_base.py  api_client_calendar.py  api_client_contacts.py  api_client_files.py  xml_security.py
nextcloud_agent/connectors/: mcp_source_presets.json  tool_schema_fingerprints.json
nextcloud_agent/mcp/: __init__.py  mcp_calendar.py  mcp_contacts.py  mcp_files.py  mcp_sharing.py  mcp_user.py
nextcloud_agent/ontology/: __init__.py  certification.json  nextcloud.ttl
nextcloud_agent/ontology/fixtures/: records.json
nextcloud_agent/ontology/mappings/: source.yaml
nextcloud_agent/ontology/migrations/: manifest.json
nextcloud_agent/ontology/shapes/: connector.shacl.ttl
nextcloud_agent/prompts/: file_steward.json  main_agent.json
nextcloud_agent/skills/nextcloud-agent-operations/: SKILL.md
nextcloud_agent/skills/nextcloud-agent-operations/agents/: openai.yaml
nextcloud_agent/skills/nextcloud-agent-operations/references/: catalog.md
nextcloud_agent/skills/nextcloud-calendar/: SKILL.md
nextcloud_agent/skills/nextcloud-contacts/: SKILL.md
nextcloud_agent/skills/nextcloud-dev-manual/: SKILL.md
nextcloud_agent/skills/nextcloud-dev-manual/reference/: android_library_index.html.md  app_backgroundjobs.html.md  app_classloader.html.md  app_code_signing.html.md  app_database.html.md  app_filesystem.html.md  app_index.html.md  app_info.html.md  app_init.html.md  app_js.html.md  app_migrations.html.md  app_repair.html.md  app_templates.html.md  client_apis_LoginFlow_index.html.md  commun_index.html.md  core_ocs-share-api.html.md  core_translation.html.md  design_content.html.md  design_css.html.md  design_html.html.md  design_navigation.html.md  design_popovermenu.html.md  general_backporting.html.md  general_code-of-conduct.html.md  general_debugging.html.md  general_devenv.html.md  general_security.html.md  server_14_developer_manual.md  server_16_developer_manual.md  server_latest_developer_manual.md
nextcloud_agent/skills/nextcloud-docs/: SKILL.md
nextcloud_agent/skills/nextcloud-docs/reference/: server_14_developer_manual_api.html.md  server_14_developer_manual_app_api.html.md  server_14_developer_manual_app_appdata.html.md  server_14_developer_manual_app_changelog.html.md  server_14_developer_manual_app_configuration.html.md  server_14_developer_manual_app_container.html.md  server_14_developer_manual_app_controllers.html.md  server_14_developer_manual_app_css.html.md  server_14_developer_manual_app_hooks.html.md  server_14_developer_manual_app_l10n.html.md  server_14_developer_manual_app_logging.html.md  server_14_developer_manual_app_middleware.html.md  server_14_developer_manual_app_publishing.html.md  server_14_developer_manual_app_request.html.md  server_14_developer_manual_app_routes.html.md  server_14_developer_manual_app_schema.html.md  server_14_developer_manual_app_settings.html.md  server_14_developer_manual_app_startapp.html.md  server_14_developer_manual_app_testing.html.md  server_14_developer_manual_app_theming.html.md  server_14_developer_manual_app_tutorial.html.md  server_14_developer_manual_app_two-factor-provider.html.md  server_14_developer_manual_app_users.html.md  server_14_developer_manual_bugtracker_index.html.md  server_14_developer_manual_client_apis_OCS_index.html.md  server_14_developer_manual_client_apis_WebDAV_index.html.md  server_14_developer_manual_client_apis_index.html.md  server_14_developer_manual_core_externalapi.html.md  (+12 more)
nextcloud_agent/skills/nextcloud-files/: SKILL.md  WORKFLOW.md
nextcloud_agent/skills/nextcloud-ingest/: SKILL.md  WORKFLOW.md
nextcloud_agent/skills/nextcloud-shares/: SKILL.md  WORKFLOW.md
nextcloud_agent/skills/nextcloud-sharing/: SKILL.md
nextcloud_agent/skills/nextcloud-starter/: SKILL.md
nextcloud_agent/skills/nextcloud-user/: SKILL.md
overview/: index.html
platform/: index.html
scripts/: validate_a2a_agent.py
search/: search_index.json
tests/: conftest.py  test_action_discovery.py  test_auth.py  test_cli_server.py  test_concept_parity.py  test_init.py  test_init_dynamics.py  test_kg_ingest.py  test_kg_media.py  test_mcp_server.py  test_nextcloud_agent_brute_force_coverage.py  test_startup.py  test_xml_security.py
usage/: index.html
