[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "nextcloud-agent"
version = "0.2.55"
description = "Nextcloud MCP Server for Agentic AI!"
readme = "README.md"
classifiers = [ "Development Status :: 3 - Alpha", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.10"
dependencies = [ "agent-utilities[agent,logfire]>=0.2.31", "python-dateutil>=2.8.2", "icalendar>=6.1.1", "vobject>=0.9.9",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.scripts]
nextcloud-mcp = "nextcloud_agent.mcp_server:mcp_server"
nextcloud-agent = "nextcloud_agent.agent_server:agent_server"

[project.optional-dependencies]
test = [ "pytest", "pytest-asyncio",]

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[tool.setuptools.package-data]
nextcloud_agent = [ "mcp_config.json", "agent_data/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]
