[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "nextcloud-agent"
version = "1.0.1"
description = "Nextcloud MCP Server for Agentic AI!"
readme = "README.md"
classifiers = [ "Development Status :: 3 - Alpha", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11, <3.15"
dependencies = [ "agent-utilities[mcp]>=1.0.0", "python-dateutil>=2.8.2", "icalendar>=6.1.1", "vobject>=0.9.9",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.scripts]
nextcloud-mcp = "nextcloud_agent.mcp_server:mcp_server"
nextcloud-agent = "nextcloud_agent.agent_server:agent_server"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=1.0.0",]
agent = [ "agent-utilities[agent,logfire]>=1.0.0",]
all = [ "agent-utilities[mcp,agent,logfire]>=1.0.0",]
test = [
    "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov",]

[project.entry-points."agent_utilities.skill_providers"]
nextcloud-agent = "nextcloud_agent.skills"

[project.entry-points."agent_utilities.ontology_providers"]
nextcloud-agent = "nextcloud_agent.ontology"

[project.entry-points."agent_utilities.source_connector_providers"]
nextcloud-agent = "nextcloud_agent.connectors"

[project.entry-points."agent_utilities.prompt_providers"]
nextcloud-agent = "nextcloud_agent.prompts"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.package-data]
nextcloud_agent = [ "mcp_config.json", "agent_data/**", "prompts/**", "skills/**", "ontology/**", "connectors/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]

[tool.vulture]
ignore_names = ["request", "config"]
